add all storage